# ZzPureTools

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.ps1
.github/actions/cmake-build/: action.yml
.github/actions/deploy-release/: action.yml
.github/actions/package-artifacts/: action.yml
.github/workflows/: build-matrix-job.yml  build.yml  code-quality.yml  release.yml  windows-build.yml
.github/workflows/reusable/: build-matrix-job.yml
ZzFluentCore/: CMakeLists.txt
ZzFluentCore/include/: ZzApplication.h  ZzDesignTokens.h  ZzFluentCoreGlobal.h  ZzFluentPainter.h  ZzTheme.h
ZzFluentCore/src/: ZzApplication.cpp  ZzFluentPainter.cpp  ZzTheme.cpp
ZzFluentExample/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
ZzFluentExample/backend/: ZzDemoViewModel.cpp  ZzDemoViewModel.h
ZzFluentWidgets/: CMakeLists.txt
ZzFluentWidgets/include/: ZzComboBox.h  ZzFluentWidgetsGlobal.h  ZzPushButton.h
ZzFluentWidgets/src/: ZzComboBox.cpp  ZzPushButton.cpp
ZzFluentWidgets/src/private/: ZzComboBoxPrivate.h  ZzPushButtonPrivate.h
cmake/: ZzFluentConfig.cmake.in  ZzPureToolsConfig.cmake.in
docs/: ROADMAP.md
example/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
example/backend/: ZzDemoViewModel.cpp  ZzDemoViewModel.hpp
include/ZzFluent/: ZzFluent.hpp
include/ZzFluent/Core/: ZzApplication.hpp  ZzFluentGlobal.hpp  ZzPalette.hpp  ZzTheme.hpp  ZzToken.hpp
include/ZzFluent/Style/: ZzAnimator.hpp  ZzStyleDelegate.hpp
include/ZzFluent/Widgets/: ZzComboBox.hpp  ZzPushButton.hpp
include/ZzPureTools/: ZzPureTools.hpp
include/ZzPureTools/Core/: ZzApplication.hpp  ZzPalette.hpp  ZzPureToolsGlobal.hpp  ZzTheme.hpp  ZzToken.hpp
include/ZzPureTools/Style/: ZzAnimator.hpp  ZzStyleDelegate.hpp
include/ZzPureTools/Widgets/: ZzComboBox.hpp  ZzPushButton.hpp
packaging/ci/: Resolve-ProjectConfig.ps1  bundle-portable-linux.sh  bundle-portable-macos.sh  bundle-portable-windows.ps1  generate_build_matrix.py  package-sdk-linux.sh  package-sdk-macos.sh  package-sdk-windows.ps1  project.json  project_config.py  qt-versions.json  qt_versions.py  resolve_project_env.sh
packaging/sdk/: SDK使用说明.txt  readme sdk.txt
packaging/sdk/examples/minimal/: CMakeLists.txt  main.cpp
src/Core/: ZzApplication.cpp  ZzPalette.cpp  ZzTheme.cpp
src/Style/: ZzAnimator.cpp  ZzComboBoxDelegate.cpp  ZzComboBoxDelegate.hpp  ZzPaintPrimitives.cpp  ZzPaintPrimitives.hpp  ZzPushButtonDelegate.cpp  ZzPushButtonDelegate.hpp  ZzStyleDelegate.cpp
src/Widgets/: ZzComboBox.cpp  ZzPushButton.cpp
